# callable

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: callable.hpp  callable.implement.hpp  callable.inl
tests/: LICENSE  assign.cpp  call.cpp  construct.cpp  destroy.cpp  parameter.cpp
tests/framework/: types.hpp
